# awa

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  prd.md
.config/: nextest.toml
awa/: Cargo.toml  README.md
awa-cli/: Cargo.toml  README.md  pyproject.toml
awa-cli/src/: context.rs  health.rs  main.rs  storage_wait.rs
awa-cli/tests/: context_cli_test.rs  health_cli_test.rs  inspection_cli_test.rs  prepare_schema_reset_guard_test.rs  storage_finalize_cli_test.rs
awa-macros/: Cargo.toml  README.md
awa-macros/src/: lib.rs
awa-metrics/: Cargo.toml  README.md
awa-metrics/src/: lib.rs
awa-model/: Cargo.toml  README.md
awa-model/migrations/: v001_canonical_schema.sql  v002_runtime_instances.sql  v003_maintenance_health.sql  v004_admin_metadata.sql  v005_admin_metadata_stmt_triggers.sql  v006_remove_hot_table_triggers.sql  v007_backoff_interval_fix.sql  v008_dead_letter_queue.sql  v008_queue_descriptors.sql  v009_descriptors.sql  v009_job_kind_descriptors.sql  v010_descriptor_liveness.sql  v010_queue_storage_insert_compat.sql  v010_storage_transition_prep.sql  v011_descriptor_runtime_hashes.sql  v011_queue_storage_compat.sql  v011_queue_storage_jobs_view_compat.sql  v011_storage_transition_self_heal.sql  v012_queue_storage_compat.sql  v012_storage_auto_finalize.sql  v013_storage_auto_finalize.sql  v014_storage_transition_role.sql  v015_cron_missed_fire_policy.sql  v017_shard_queue_enqueue_heads.sql  v018_insert_job_compat_ordering_key.sql  v019_queue_storage_jobs_compat_shard_joins.sql  v020_active_queue_storage_schema_fallback.sql  v021_shard_aware_lane_indexes.sql  v022_delete_compat_terminal_counter.sql  v023_install_queue_storage_substrate.sql  v024_receipt_plane_fillfactor.sql  v025_drop_leases_state_hb_index.sql  v026_cron_jobs_pause.sql  v027_sequence_lane_cursors.sql  v028_ready_tombstones.sql  v029_batch_operations.sql  v030_terminal_count_deltas.sql  v031_queue_storage_failed_done_indexes.sql  v032_failed_terminal_retention.sql  v033_receipt_rescue_cursors.sql  (+15 more)
awa-model/queries/: claim.sql  cleanup.sql  heartbeat.sql  promote.sql  rescue_deadline.sql  rescue_stale.sql  stats.sql
awa-model/src/: adapter.rs  admin.rs  batch_operations.rs  bridge.rs  callback_contract.rs  cron.rs  dlq.rs  error.rs  insert.rs  job.rs  kind.rs  lib.rs  migrations.rs  partitioned_queue.rs  queue_fanout.rs  queue_storage.rs  storage.rs  trace.rs  unique.rs  vacuum_aware.rs
awa-model/tests/: bench_descriptor_sync.rs  bridge_tokio_pg_test.rs  descriptor_constraints_test.rs  heartbeat_write_removal_test.rs  least_privilege_migration_test.rs  queue_storage_copy_test.rs  receipt_plane_fillfactor_test.rs  sql_only_storage_upgrade_test.rs
awa-python/: Cargo.toml  README.md  pyproject.toml
awa-python/examples/: progress.py  quickstart.py  sync_api.py  telemetry.py  ui_demo.py
awa-python/scripts/: bench_output.py  benchmark_runtime.py
awa-python/src/: args.rs  callback_contract.rs  client.rs  dlq.rs  errors.rs  job.rs  lib.rs  partitioned_queue.rs  queue_fanout.rs  serve.rs  telemetry.rs  transaction.rs  worker.rs
awa-python/tests/: _subprocess_exit.py  chaos_worker.py  mixed_fleet_helper.py  storage_reset.py  test_adversarial_api.py  test_awa.py  test_batch_operations.py  test_bridge.py  test_callback_contract.py  test_callback_edge_cases.py  test_callbacks.py  test_chaos_recovery.py  test_cli.py  test_cross_language.py  test_descriptors.py  test_dlq.py  test_job_errors.py  test_job_properties.py  test_migration_concurrency.py  test_partitioned_queue.py  test_periodic.py  test_progress.py  test_queue_fanout.py  test_sequential_callbacks.py  test_start_config.py  test_subprocess_exit.py  test_sync.py  test_telemetry.py  test_testing_module.py  test_trace.py  test_unique_insert.py  test_worker_dispatch.py
awa-seaorm/: Cargo.toml  README.md
awa-seaorm/src/: entity.rs  lib.rs  mapping.rs  repo.rs  sql.rs
awa-seaorm/tests/: lifecycle.rs  seaorm.rs
awa-testing/: Cargo.toml  README.md
awa-testing/src/: lib.rs  setup.rs
awa-ui/: Cargo.toml  README.md  build.rs
awa-ui/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  sidebar-repro.spec.ts  tsconfig.tsbuildinfo  vite.config.ts
awa-ui/src/: cache.rs  callback_router.rs  error.rs  lib.rs  state.rs
awa-ui/tests/: admin_api_test.rs  callback_api_test.rs  callback_router_test.rs  cron_api_test.rs  runtime_api_test.rs
awa-worker/: Cargo.toml  README.md
awa-worker/src/: cancel_listener.rs  client.rs  completion.rs  context.rs  dispatcher.rs  enqueue_specs.rs  events.rs  executor.rs  health_server.rs  heartbeat.rs  http_worker.rs  lib.rs  maintenance.rs  metrics.rs  runtime.rs  storage.rs
awa/examples/: etl_pipeline.rs  poll_until_deadline.rs  screenshot_worker.rs
awa/src/: lib.rs
awa/tests/: adapter_api_test.rs  bench_output.rs  benchmark_test.rs  cel_callback_test.rs  chaos_suite_test.rs  concurrent_lifecycle_test.rs  copy_test.rs  cron_test.rs  dlq_test.rs  enqueue_spec_test.rs  executor_guard_test.rs  external_wait_test.rs  failure_benchmark_test.rs  health_endpoint_test.rs  http_worker_test.rs  integration_test.rs  lifecycle_hook_test.rs  migration_test.rs  observability_test.rs  pg_restart_chaos_test.rs  poll_until_deadline_test.rs  postgres_failover_smoke_test.rs  progress_test.rs  queue_overrides_test.rs  queue_storage_benchmark_test.rs  queue_storage_runtime_test.rs  queue_storage_soak_test.rs  rate_limit_test.rs  receipt_plane_chaos_test.rs  receipt_plane_regression_gate.rs  rescue_unique_conflict_test.rs  retention_test.rs  rolling_transition_rehearsal_test.rs  rolling_upgrade_rehearsal_test.rs  scale_test.rs  scheduling_benchmark_test.rs  telemetry_test.rs  tick_test.rs  trace_propagation_test.rs  vacuum_aware_storage_benchmark_test.rs  (+2 more)
benchmarks/portable/: CONTRIBUTING_ADAPTERS.md  README.md  UNIFIED_DRIVER_DESIGN.md  awa_semantics.py  chaos.py  docker-compose.yml  full_suite.py  init-databases.sql  isolated.py  postgres.conf  pyproject.toml  run.py  worker_scale.py
examples/python-app-demo/: README.md  pyproject.toml  seed_demo.py
(+413 files in other folders)
