[workspace]
resolver = "2"
members = [
    "awa-model",
    "awa-macros",
    "awa-worker",
    "awa",
    "awa-testing",
    "awa-cli",
]
exclude = ["awa-python", "spike"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Postgres-native background job queue for Rust and Python"
repository = "https://github.com/hardbyte/awa"

[workspace.dependencies]
# Internal crates
awa-model = { path = "awa-model", version = "0.1.1" }
awa-macros = { path = "awa-macros", version = "0.1.1" }
awa-worker = { path = "awa-worker", version = "0.1.1" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
async-trait = "0.1"

# Error handling
thiserror = "2"

# Crypto
blake3 = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29", features = ["metrics", "rt-tokio"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Proc macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
