[package]
name = "awa-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "awa"
path = "src/main.rs"

[dependencies]
awa-model.workspace = true
sqlx.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
