[package]
name = "awa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for the Awa job queue"
repository.workspace = true
readme = "README.md"

[[bin]]
name = "awa"
path = "src/main.rs"

[dependencies]
awa-model.workspace = true
awa-ui = { path = "../awa-ui", version = "0.5.1" }
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
hex.workspace = true
