[package]
name = "awa-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Derive macros for the Awa job queue"
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro-crate = "3"
