[package]
name = "awa-model"
version.workspace = true
edition.workspace = true

[dependencies]
awa-macros.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
blake3.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
