[package]
name = "awa-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, queries, and migrations for the Awa job queue"
repository.workspace = true
readme.workspace = true

[dependencies]
awa-macros.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
blake3.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
croner.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
