[package]
name = "awa-python"
version = "0.6.0-alpha.4"
edition = "2021"

[lib]
name = "_awa"
crate-type = ["cdylib"]

[features]
default = ["cel", "ui"]
cel = ["awa-model/cel"]
# Embed the awa-ui axum server + React bundle. Drives the `serve` PyO3
# function and adds ~10MB to the cdylib. Source consumers who never serve
# the UI can opt out with --no-default-features --features cel.
ui = ["dep:awa-ui", "dep:axum", "dep:hex"]

[dependencies]
awa-model = { path = "../awa-model", version = "0.6.0-alpha.4" }
awa-worker = { path = "../awa-worker", version = "0.6.0-alpha.4", features = ["__python-bridge"] }
awa-ui = { path = "../awa-ui", version = "0.6.0-alpha.4", optional = true }
pyo3 = { version = "0.28", features = ["macros", "abi3-py310", "chrono"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", optional = true }
hex = { version = "0.4", optional = true }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
async-trait = "0.1"
pythonize = "0.28.0"

opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
