[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "awa"
requires-python = ">=3.10"
version = "0.1.0"
description = "Postgres-native background job queue for Rust and Python"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "awa._awa"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "chaos: exercises kill -9 recovery with real worker subprocesses",
]
