[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "awa-pg"
requires-python = ">=3.10"
version = "0.2.1"
description = "Postgres-native background job queue for Rust and Python"
readme = {file = "../README.md", content-type = "text/markdown"}
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "Brian Thorne"}]
keywords = ["postgres", "job-queue", "background-jobs", "pyo3", "async"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
]
[project.urls]
Repository = "https://github.com/hardbyte/awa"
Documentation = "https://github.com/hardbyte/awa#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "awa._awa"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "chaos: exercises kill -9 recovery with real worker subprocesses",
]
