[package]
name = "awa-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web UI and JSON API for the Awa job queue"
repository.workspace = true
readme = "README.md"

[dependencies]
awa-model.workspace = true
axum.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
mime_guess = "2"
moka = { version = "0.12.15", features = ["future"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
awa-testing = { path = "../awa-testing" }
tower = "0.5"
