[package]
name = "awa-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web UI and JSON API for the Awa job queue"
repository.workspace = true
readme = "README.md"
# The built React bundle (`static/index.html`, `static/assets/*`) is
# .gitignored for dev ergonomics, so cargo publish would skip it by default
# and ship an awa-ui crate with no embedded frontend. Explicitly include the
# built output here — release.yml runs `npm run build` before this crate is
# packaged (see #162 / PR #163).
include = [
    "/src/**/*",
    "/static/**/*",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
]

[dependencies]
awa-model.workspace = true
axum.workspace = true
blake3.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
mime_guess = "2"
moka = { version = "0.12.15", features = ["future"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
awa-testing = { path = "../awa-testing" }
tower = "0.5"
