[package]
name = "awa-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Worker runtime for the Awa job queue"
repository.workspace = true
readme = "README.md"

[features]
cel = ["awa-model/cel"]
anyhow = ["dep:anyhow"]
__python-bridge = []

[dependencies]
awa-model.workspace = true
awa-macros.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
croner.workspace = true
tracing.workspace = true
uuid.workspace = true
opentelemetry.workspace = true
anyhow = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true
