[package]
name = "awa"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[features]
cel = ["awa-model/cel"]

[dependencies]
awa-model.workspace = true
awa-macros.workspace = true
awa-worker.workspace = true

[dev-dependencies]
awa-testing = { path = "../awa-testing", version = "0.3.0-alpha.2" }
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing-subscriber = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
opentelemetry = { workspace = true, features = ["testing"] }
tracing = { workspace = true }
