[project]
name = "awa-demo-shop"
version = "0.1.0"
description = "Tiny FastAPI app showing SQLAlchemy-backed transactional enqueue and an operational Awa UI story"
requires-python = ">=3.10"
dependencies = [
    "awa-pg>=0.6",
    "awa-cli>=0.6",
    "asyncpg>=0.31.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
awa-pg = { path = "../../awa-python" }
awa-cli = { path = "../../awa-cli" }
