[package]
name = "awa-rust-demo-shop"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
async-trait = "0.1"
awa = { path = "../../awa" }
awa-model = { path = "../../awa-model" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
